# beedb

./: .gitignore  .pre-commit-hook  CMakeLists.txt  LICENSE  README.md  beedb.ini
include/: config.h  database.h
include/boot/: execution_callback.h
include/buffer/: clock_strategy.h  frame.h  lfu_strategy.h  lru_k_strategy.h  lru_strategy.h  manager.h  random_strategy.h  replacement_strategy.h
include/compression/: wah_bit_vector.h
include/concurrency/: metadata.h  timestamp.h  transaction.h  transaction_callback.h  transaction_manager.h
include/exception/: command_exception.h  concurrency_exception.h  config_exception.h  disk_exception.h  exception.h  execution_exception.h  logical_exception.h  parser_exception.h
include/execution/: add_to_index_operator.h  aggregate_operator.h  aggregator.h  arithmetic_calculator.h  arithmetic_operator.h  binary_operator.h  build_index_operator.h  create_index_operator.h  create_table_operator.h  cross_product_operator.h  delete_operator.h  hash_join_operator.h  index_scan_operator.h  insert_operator.h  limit_operator.h  nested_loops_join_operator.h  operator_interface.h  order_operator.h  predicate_matcher.h  projection_operator.h  selection_operator.h  sequential_scan_operator.h  transaction_operator.h  tuple_buffer.h  tuple_buffer_operator.h  unary_operator.h  update_operator.h
include/expression/: attribute.h  operation.h  term.h
include/index/: index_factory.h  index_interface.h  non_unique_index_interface.h  range_index_interface.h  return_value.h  type.h  unique_index_interface.h
include/index/b_plus_tree/: b_plus_tree.h  b_plus_tree.hpp  b_plus_tree_node.h  non_unique_b_plus_tree_index.h  unique_b_plus_tree_index.h
include/io/: client_console.h  client_handler.h  client_message_serializer.h  execution_callback.h  executor.h  file_executor.h  query_result_serializer.h  result_output_formatter.h  server_response.h
include/io/command/: commander.h  custom_command_interface.h  custom_commands.h
include/network/: client.h  server.h
include/parser/: .gitignore  driver.h  node.h  scanner.hpp  sql_parser.h
include/plan/graph/: basic_graph.h
include/plan/logical/: builder.h  plan_view.h
include/plan/logical/node/: aggregation_node.h  arithmetic_node.h  create_index_node.h  create_table_node.h  cross_product_node.h  delete_node.h  insert_node.h  join_node.h  limit_node.h  node_interface.h  order_by_node.h  projection_node.h  scan_node.h  schema.h  selection_node.h  table.h  transaction_node.h  update_node.h
include/plan/optimizer/: optimizer.h
include/plan/physical/: builder.h  plan.h
include/statistic/: system_statistics.h
include/storage/: manager.h  metadata_page.h  page.h  record_identifier.h  record_page.h
include/table/: column.h  date.h  memory_table.h  schema.h  table.h  table_disk_manager.h  tuple.h  type.h  value.h
include/util/: clock.h  command_line_interface.h  ini_parser.h  mpmc_queue.h  optional.h  perf.h  quicksort.h  random_generator.h  text_table.h
lib/argparse/: argparse.hpp
lib/linenoise/: linenoise.h
lib/nlohmann/: json.hpp
src/: beedb_client.cpp  beedb_server.cpp  database.cpp
src/boot/: execution_callback.cpp
src/buffer/: clock_strategy.cpp  lfu_strategy.cpp  lru_k_strategy.cpp  lru_strategy.cpp  manager.cpp  random_strategy.cpp
src/concurrency/: transaction_manager.cpp  transaction_visibility.cpp
src/execution/: add_to_index_operator.cpp  aggregate_operator.cpp  arithmetic_operator.cpp  binary_operator.cpp  build_index_operator.cpp  create_index_operator.cpp  create_table_operator.cpp  cross_product_operator.cpp  delete_operator.cpp  hash_join_operator.cpp  index_scan_operator.cpp  insert_operator.cpp  limit_operator.cpp  nested_loops_join_operator.cpp  order_operator.cpp  projection_operator.cpp  selection_operator.cpp  sequential_scan_operator.cpp  transaction_operator.cpp  tuple_buffer_operator.cpp  update_operator.cpp
src/expression/: operation.cpp
src/io/: client_console.cpp  client_handler.cpp  executor.cpp  file_executor.cpp  query_result_serializer.cpp  result_output_formatter.cpp
src/io/command/: commander.cpp  custom_commands.cpp
src/network/: client.cpp  server.cpp
src/parser/: .gitignore  driver.cpp  parser.yy  scanner.ll  sql_parser.cpp
src/plan/logical/: builder.cpp  plan_view.cpp
src/plan/optimizer/: optimizer.cpp
src/plan/physical/: builder.cpp  plan.cpp
src/storage/: manager.cpp
src/table/: column.cpp  table.cpp  table_disk_manager.cpp  value.cpp
src/util/: ini_parser.cpp  perf.cpp  random_generator.cpp  text_table.cpp
(+15 files in other folders)
